[tool.poetry]
name = "wakeupcall"
version = "1.0"
description = "Spotify Playlist Manager, Radio and Remote API"
authors = ["wackazong"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.6"
PyMySQL = "^1.0.2"
python-dateutil = "^2.8.1"
pytz = "^2020.5"
spotipy = "^2.16.1"
ssdp = "^1.0.1"
zeroconf = "^0.28.8"
xled = {git = "https://github.com/scrool/xled.git", rev = "develop"}
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"
celery = "^5.0.5"
pydantic = "^1.7.3"
redis = "^3.5.3"
python-dotenv = "^0.15.0"
aioredis = "^1.3.1"
orjson = "^3.4.8"
aiohttp = "^3.7.3"
aiodns = "^2.0.0"
cchardet = "^2.1.7"
asgiref = "^3.3.1"
dependency-injector = "^4.26.0"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pytest = "^6.2.2"
flake8 = "^3.8.4"
mockito = "^1.2.2"
pytest-mockito = "^0.0.4"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
debugpy = "^1.2.1"
mypy = "^0.812"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
